# contracts

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
ckb/: .gitignore  Cargo.toml  Makefile  testnet.toml
ckb/contracts/wraith-names-type/: Cargo.toml
ckb/contracts/wraith-stealth-lock/: Cargo.toml
evm/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
evm/contracts/: ERC5564Announcer.sol  ERC6538Registry.sol  WraithNames.sol  WraithSender.sol  WraithWithdrawer.sol
evm/contracts/interfaces/: IERC5564Announcer.sol  IERC6538Registry.sol
evm/contracts/test/: ERC20Mock.sol
evm/scripts/: deploy.ts
evm/subgraph/: README.md
evm/subgraph/horizen-testnet/: instant-config.json
evm/test/: ERC5564Announcer.test.ts  ERC6538Registry.test.ts  WraithNames.test.ts  WraithSender.test.ts  WraithWithdrawer.test.ts
solana/: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
solana/programs/wraith-announcer/: Cargo.toml  keypair.json
solana/programs/wraith-announcer/src/: lib.rs
solana/programs/wraith-names/: Cargo.toml  keypair.json
solana/programs/wraith-names/src/: lib.rs
solana/programs/wraith-sender/: Cargo.toml  keypair.json
solana/programs/wraith-sender/src/: lib.rs
solana/tests/: wraith-announcer.ts  wraith-names.ts  wraith-sender.ts
stellar/: Cargo.toml
stellar/stealth-announcer/: Cargo.toml
stellar/stealth-registry/: Cargo.toml
stellar/stealth-sender/: Cargo.toml
stellar/wraith-names/: Cargo.toml
(+16 files in other folders)
