[package]
name = "wraith-names"
version = "0.1.0"
description = "PDA-based name registry for Wraith Protocol stealth meta-addresses"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wraith_names"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
