[package]
name = "wraith-sender"
version = "0.1.0"
description = "Atomic SOL/SPL transfer + stealth announcement for Wraith Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wraith_sender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
